<resources>
    <string name="app_name">Shopping Helper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_category">CategoryActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_assistant">Personal assistant</string>
    <string name="create_a_new_shopping_list">Create a new shopping list</string>
    <string name="list_details">List details</string>
    <string name="list_name">List name</string>
    <string name="positive_button">Ok</string>
    <string name="negative_button">Cancel</string>
    <string name="id">ID</string>
    <string name="list_tile_name">List name</string>
    <string name="category_name">Category name</string>
    <string name="tile_category_name">Category name</string>
    <string name="item_name">Item name</string>
    <string name="item_s_list_name">Item\'s list name</string>
    <string name="category_of_item">Category of item</string>
    <string name="price">Price</string>
    <string name="shoplist_name">Shoplist name</string>
    <string name="fragment_list_itemcategory">Category</string>
    <string name="fragment_list_itemname">Name</string>
    <string name="fragment_list_hint_name">Name</string>
    <string name="fragment_list_button">Add</string>
    <string name="amount">Amount</string>
    <string name="fragment_category_name">Category name</string>
    <string name="categories_category">Categories</string>
    <string name="shopping_lists_list">Shopping lists</string>
    <string name="data_management_buttons">Data management buttons</string>
    <string name="clear_categories">Clear categories</string>
    <string name="clear_items">Clear Items</string>
    <string name="clear_shopping_lists">Clear shopping lists</string>
    <string name="in_cart">In Cart</string>
    <string name="price_amount">Price amount</string>
    <string name="total_price">Total price</string>
    <string name="in_cart_shoplist_name">Shoplist name</string>
    <string name="in_cart_amount_tv">Price</string>

</resources>
