<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/data_management_buttons"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_clear_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_categories" />

        <Button
            android:id="@+id/bt_clear_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_items" />

        <Button
            android:id="@+id/bt_clear_shopping_lists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_shopping_lists" />
    </LinearLayout>

</LinearLayout>